update comment to test git

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </div>
 </body>
 <script id="sphereVertexShader" type="text/something-not-javascript">
+// testing a comment
 uniform mat4 worldViewProjection;
 uniform vec3 lightWorldPos;
 uniform mat4 world;
