split up stuff into separate files (for no good reason?)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>boom bam beat</title>
 <link type="text/css" href="bbb/boombambeat.css" rel="stylesheet" />
 <script type="text/javascript" src="tdl/base.js"></script>
-<script type="text/javascript" src="bbb/boombambeat.js"></script>
+<script type="text/javascript" src="bbb/main.js"></script>
 </head>
 <body>
 <div class="fpsContainer">
