--- a/index.html
+++ b/index.html
@@ -105,39 +105,39 @@ const float kOffsetXYZSHigh = kHalfPixelOffset + kPixelOffset;
 const float kOffsetColor = kHalfPixelOffset + kPixelOffset * 2.0;
 const float kOffsetRotation = kHalfPixelOffset + kPixelOffset * 3.0;
 
-#if 0
-
-mat4 quatToMatrix(vec4 orientation, vec3 translation) {
-    float xx      = orientation.x * orientation.x;
-    float xy      = orientation.x * orientation.y;
-    float xz      = orientation.x * orientation.z;
-    float xw      = orientation.x * orientation.w;
-    float yy      = orientation.y * orientation.y;
-    float yz      = orientation.y * orientation.z;
-    float yw      = orientation.y * orientation.w;
-    float zz      = orientation.z * orientation.z;
-    float zw      = orientation.z * orientation.w;
-
-    return mat4(
-      1.0 - 2.0 * ( yy + zz ),
-            2.0 * ( xy - zw ),
-            2.0 * ( xz + yw ),
-      0,
-
-            2.0 * ( xy + zw ),
-      1.0 - 2.0 * ( xx + zz ),
-            2.0 * ( yz - xw ),
-      0,
-
-            2.0 * ( xz - yw ),
-            2.0 * ( yz + xw ),
-      1.0 - 2.0 * ( xx + yy ),
-      0,
-
-      translation.x, translation.y, translation.z, 1);
-}
-
-#else
+//#if 0
+//
+//mat4 quatToMatrix(vec4 orientation, vec3 translation) {
+//    float xx      = orientation.x * orientation.x;
+//    float xy      = orientation.x * orientation.y;
+//    float xz      = orientation.x * orientation.z;
+//    float xw      = orientation.x * orientation.w;
+//    float yy      = orientation.y * orientation.y;
+//    float yz      = orientation.y * orientation.z;
+//    float yw      = orientation.y * orientation.w;
+//    float zz      = orientation.z * orientation.z;
+//    float zw      = orientation.z * orientation.w;
+//
+//    return mat4(
+//      1.0 - 2.0 * ( yy + zz ),
+//            2.0 * ( xy - zw ),
+//            2.0 * ( xz + yw ),
+//      0,
+//
+//            2.0 * ( xy + zw ),
+//      1.0 - 2.0 * ( xx + zz ),
+//            2.0 * ( yz - xw ),
+//      0,
+//
+//            2.0 * ( xz - yw ),
+//            2.0 * ( yz + xw ),
+//      1.0 - 2.0 * ( xx + yy ),
+//      0,
+//
+//      translation.x, translation.y, translation.z, 1);
+//}
+//
+//#else
 
 
 mat4 quatToMatrix(vec4 orientation, vec3 translation) {
@@ -164,7 +164,8 @@ mat4 quatToMatrix(vec4 orientation, vec3 translation) {
 
       translation.x, translation.y, translation.z, 1);
 }
-#endif
+
+//#endif
 
 void main() {
 
