--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>boom bam beat</title>
 <link type="text/css" href="bbb/boombambeat.css" rel="stylesheet" />
+<script type="text/javascript" src="libs/DAT.GUI.min.js"></script>
 <script type="text/javascript" src="tdl/base.js"></script>
 <script type="text/javascript" src="bbb/main.js"></script>
 </head>
@@ -214,10 +215,13 @@ uniform vec3 lightWorldPos;
 uniform mat4 world;
 uniform mat4 viewInverse;
 
+uniform float time;
 uniform sampler2D segmentTexture;
 uniform float modelsPerSegment;
 uniform vec4 segmentScale;
 uniform float segmentSpacingZ;
+uniform vec2 segmentMoveScale;
+uniform vec2 segmentMovePhase;
 
 attribute vec4 position;
 attribute vec3 normal;
@@ -279,9 +283,13 @@ void main() {
       texture2D(segmentTexture, vec2(unitPixel, kOffsetRotation)) * 2.0 -
       vec4(1, 1, 1, 1);
 
+  vec2 segmentClock = time + segmentId * segmentMovePhase;
+  vec2 segmentMovement = vec2(sin(segmentClock.x), cos(segmentClock.y)) *
+      segmentMoveScale;
+
   vec4 xyzsOffset = vec4(xyzsLowOff * 256.0 + xyzsHighOff * 65536.0) / 65535.0 *
       segmentScale - segmentScale * 0.5 +
-      vec4(0, 0, segmentId * segmentSpacingZ, 0);
+      vec4(segmentMovement, segmentId * segmentSpacingZ, 0);
 
   mat4 local = world * quatToMatrix(rotation, xyzsOffset.xyz);
   mat4 worldViewProjection = viewProjection * local;
